<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <SearchView
                android:id="@+id/search"
                style="@android:style/Widget.Material.Light.SearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="#FFFFFF"
                android:focusable="false"
                android:imeOptions="actionSearch"
                android:iconifiedByDefault="false"
                android:queryBackground="@color/common_google_signin_btn_text_dark_default"
                android:queryHint="Search Location" />
        </LinearLayout>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:context=".fragment.SetTripFragment" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="Arrival Date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="(DD/MM/YYYY)"
                android:inputType="date"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="Arrival Time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arrivalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="(HH:MM)"
                android:inputType="time"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/setOrigin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Set Origin" />

        <Button
            android:id="@+id/To"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Find Route" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>